[gd_scene load_steps=5 format=3 uid="uid://dr76vxhqro2r7"]

[ext_resource type="Script" path="res://Scenes/WeaponManager.gd" id="1_24uoy"]
[ext_resource type="Texture2D" uid="uid://d0f0qo8fxpoe5" path="res://Asset/baguette.png" id="2_rchdp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oe4eu"]
size = Vector2(89.8026, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3t2x0"]
size = Vector2(118.971, 79.5495)

[node name="Weapon" type="RigidBody2D"]
script = ExtResource("1_24uoy")

[node name="WeaponSprite2D" type="Sprite2D" parent="."]
position = Vector2(111, 219)
rotation = -0.785398
texture = ExtResource("2_rchdp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(114.75, 217.25)
rotation = -0.785398
shape = SubResource("RectangleShape2D_oe4eu")

[node name="WeaponPickupArea2D" type="Area2D" parent="."]
position = Vector2(158, -15)
rotation = -0.785398

[node name="PickupCollisionShape2D2" type="CollisionShape2D" parent="WeaponPickupArea2D"]
position = Vector2(-195.161, 134.35)
shape = SubResource("RectangleShape2D_3t2x0")

[node name="interact" type="Label" parent="."]
visible = false
offset_left = 29.0
offset_top = 322.0
offset_right = 169.0
offset_bottom = 374.0
text = "Press 'P' to pickup"

[connection signal="body_entered" from="WeaponPickupArea2D" to="." method="_on_weapon_pickup_area_2d_body_entered"]
[connection signal="body_exited" from="WeaponPickupArea2D" to="." method="_on_weapon_pickup_area_2d_body_exited"]
